--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "next-netlify-starter",
   "version": "0.5.0",
   "private": true,
+  "engines": {
+    "node": "16.x"
+  }
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "start": "next start -p $PORT",
+    "heroku-postbuild": "npm run build",
     "export": "next export"
   },
   "dependencies": {
