--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "next": "^12.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "next-share": "0.12.2"
+    "react-social-icons": "^5.10.0"
   }
 }
